istio/samples/mscloud/networking/mscloud-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mscloud-gateway
  namespace: mscloud
spec:
  selector:
    istio: ingressgateway # use istio default controller, the istio version is 1.2.6
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mscloud
  namespace: mscloud
spec:
  hosts:
  - "*"
  gateways:
  - mscloud-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: mscloud-zuul-service
        port:
          number: 5000
        subset: v1
