istio/samples/mscloud/networking/virtual-service-provider-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mscloud
  namespace: mscloud
spec:
  hosts:
    - "*"
  gateways:
    - mscloud-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: mscloud-zuul-service
            port:
              number: 5000
    - match:
        - uri:
            exact: /provider/port
      route:
        - destination:
            host: mscloud-provider-service
            subset: v2
